// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`botConfigFactory config with caseSensitive 1`] = `
Object {
  "caseSensitive": false,
  "comment": "test",
  "issueConfigs": Array [
    Object {
      "content": Array [
        "123",
      ],
    },
  ],
}
`;

exports[`botConfigFactory config without caseSensitive 1`] = `
Object {
  "caseSensitive": true,
  "comment": "test",
  "issueConfigs": Array [
    Object {
      "content": Array [
        "123",
      ],
    },
  ],
}
`;
